# nostube-transcode

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DVM_API.md  Dockerfile  Dockerfile.nvidia  README.md  bench_transcode.sh  docker-compose.nvidia.yml  docker-compose.yml  install.sh  setup.sh  spec.md
.github/workflows/: docker.yml  release.yml
docs/: admin-protocol.md  contextvm-broken-links.md  contextvm-research.md  deployment.md  video-test-spec.md
docs/plans/: 2025-12-20-cross-platform-hwaccel-design.md  2025-12-20-cross-platform-hwaccel-implementation.md  2026-01-16-codec-selection-design.md  2026-01-16-upload-estimation-json-display-hls-encryption-design.md  2026-01-31-remote-config-design.md  2026-01-31-remote-config-implementation.md  2026-02-01-unified-dashboard.md  2026-02-14-admin-protocol-v2-design.md  2026-02-14-admin-protocol-v2-implementation.md  2026-02-20-video-test-suite-design.md  2026-03-06-selftest-suite.md
docs/screenshots/: README.md
docs/superpowers/plans/: 2026-05-04-cli-service-management.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Dashboard.css  Dashboard.tsx
frontend/src/components/: DvmList.css  (+19 more)
src/: bootstrap.rs  cli.rs  config.rs  config_cmd.rs  const.rs  docker_cmd.rs  doctor.rs  dvm_state.rs  env.rs  error.rs  identity.rs  lib.rs  main.rs  pairing.rs  paths.rs  remote_config.rs  runtime.rs  setup.rs  startup.rs  update_cmd.rs
src/admin/: commands.rs  handler.rs  listener.rs  mod.rs
src/blossom/: auth.rs  cleanup.rs  client.rs  mod.rs
src/dvm/: announcement.rs  encryption.rs  events.rs  handler.rs  mod.rs
src/helpers/: blossom.rs  dvm.rs  ffmpeg.rs  mod.rs
src/nostr/: client.rs  mod.rs  publisher.rs
src/selftest/: mod.rs  runner.rs  validate.rs
src/service/: launchd.rs  mod.rs  process.rs  systemd.rs  sysv.rs
src/util/: ffmpeg_discovery.rs  ffmpeg_progress.rs  hash.rs  mod.rs  temp.rs
src/video/: ffmpeg.rs  hwaccel.rs  metadata.rs  mod.rs  playlist.rs  transform.rs
src/web/: mod.rs
test-videos/: TEST-VIDEOS.md  vp9-1080p-landscape.webm  vp9-720p-landscape.webm
tests/: remote_config_integration.rs
(+8 files in other folders)
