[package]
name = "nostube-transcode"
version = "0.1.0"
edition = "2021"

[dependencies]
# Nostr
nostr-sdk = "0.37"
nostr = "0.37"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["stream", "json"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Environment
dotenv = "0.15"

# Utilities
chrono = "0.4"
regex = "1.10"
rand = "0.8"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
